; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_init_throttle_period.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/specfs/extr_spec_vnops.c_throttle_init_throttle_period.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._throttle_io_info_t = type { i64, i32* }

@TRUE = common dso_local global i64 0, align 8
@throttle_io_period_ssd_msecs = common dso_local global i32* null, align 8
@throttle_io_period_msecs = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [30 x i8] c"kern.io_throttle_period_tier1\00", align 1
@THROTTLE_LEVEL_TIER1 = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [30 x i8] c"kern.io_throttle_period_tier2\00", align 1
@THROTTLE_LEVEL_TIER2 = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [30 x i8] c"kern.io_throttle_period_tier3\00", align 1
@THROTTLE_LEVEL_TIER3 = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [25 x i8] c"io_throttle_period_tier1\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"io_throttle_period_tier2\00", align 1
@.str.5 = private unnamed_addr constant [25 x i8] c"io_throttle_period_tier3\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct._throttle_io_info_t*, i64)* @throttle_init_throttle_period to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @throttle_init_throttle_period(%struct._throttle_io_info_t* %0, i64 %1) #0 {
  %3 = alloca %struct._throttle_io_info_t*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct._throttle_io_info_t* %0, %struct._throttle_io_info_t** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @TRUE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %19

9:                                                ; preds = %2
  %10 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %11 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32*, i32** @throttle_io_period_ssd_msecs, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %18 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %17, i32 0, i32 1
  store i32* %16, i32** %18, align 8
  br label %24

19:                                               ; preds = %9, %2
  %20 = load i32*, i32** @throttle_io_period_msecs, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  %22 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %23 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %22, i32 0, i32 1
  store i32* %21, i32** %23, align 8
  br label %24

24:                                               ; preds = %19, %14
  %25 = call i64 @PE_get_default(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32* %5, i32 4)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %34

27:                                               ; preds = %24
  %28 = load i32, i32* %5, align 4
  %29 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %30 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %29, i32 0, i32 1
  %31 = load i32*, i32** %30, align 8
  %32 = load i64, i64* @THROTTLE_LEVEL_TIER1, align 8
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  store i32 %28, i32* %33, align 4
  br label %34

34:                                               ; preds = %27, %24
  %35 = call i64 @PE_get_default(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32* %5, i32 4)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %44

37:                                               ; preds = %34
  %38 = load i32, i32* %5, align 4
  %39 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %40 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %39, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  %42 = load i64, i64* @THROTTLE_LEVEL_TIER2, align 8
  %43 = getelementptr inbounds i32, i32* %41, i64 %42
  store i32 %38, i32* %43, align 4
  br label %44

44:                                               ; preds = %37, %34
  %45 = call i64 @PE_get_default(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i32* %5, i32 4)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %54

47:                                               ; preds = %44
  %48 = load i32, i32* %5, align 4
  %49 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %50 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %49, i32 0, i32 1
  %51 = load i32*, i32** %50, align 8
  %52 = load i64, i64* @THROTTLE_LEVEL_TIER3, align 8
  %53 = getelementptr inbounds i32, i32* %51, i64 %52
  store i32 %48, i32* %53, align 4
  br label %54

54:                                               ; preds = %47, %44
  %55 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0), i32* %5, i32 4)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %64

57:                                               ; preds = %54
  %58 = load i32, i32* %5, align 4
  %59 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %60 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %59, i32 0, i32 1
  %61 = load i32*, i32** %60, align 8
  %62 = load i64, i64* @THROTTLE_LEVEL_TIER1, align 8
  %63 = getelementptr inbounds i32, i32* %61, i64 %62
  store i32 %58, i32* %63, align 4
  br label %64

64:                                               ; preds = %57, %54
  %65 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0), i32* %5, i32 4)
  %66 = icmp ne i64 %65, 0
  br i1 %66, label %67, label %74

67:                                               ; preds = %64
  %68 = load i32, i32* %5, align 4
  %69 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %70 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %69, i32 0, i32 1
  %71 = load i32*, i32** %70, align 8
  %72 = load i64, i64* @THROTTLE_LEVEL_TIER2, align 8
  %73 = getelementptr inbounds i32, i32* %71, i64 %72
  store i32 %68, i32* %73, align 4
  br label %74

74:                                               ; preds = %67, %64
  %75 = call i64 @PE_parse_boot_argn(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.5, i64 0, i64 0), i32* %5, i32 4)
  %76 = icmp ne i64 %75, 0
  br i1 %76, label %77, label %84

77:                                               ; preds = %74
  %78 = load i32, i32* %5, align 4
  %79 = load %struct._throttle_io_info_t*, %struct._throttle_io_info_t** %3, align 8
  %80 = getelementptr inbounds %struct._throttle_io_info_t, %struct._throttle_io_info_t* %79, i32 0, i32 1
  %81 = load i32*, i32** %80, align 8
  %82 = load i64, i64* @THROTTLE_LEVEL_TIER3, align 8
  %83 = getelementptr inbounds i32, i32* %81, i64 %82
  store i32 %78, i32* %83, align 4
  br label %84

84:                                               ; preds = %77, %74
  ret void
}

declare dso_local i64 @PE_get_default(i8*, i32*, i32) #1

declare dso_local i64 @PE_parse_boot_argn(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
